charts/region/sno-srv-install/templates/facility-manager-service/facility-manager-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: facility-manager-service
spec:
  ipFamilyPolicy: SingleStack
  ports:
  - name: tcp-internal
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: tcp-external
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: facility-manager-service
    deploymentconfig: facility-manager-service
  sessionAffinity: None
  type: ClusterIP
