charts/region/sno-srv-install/templates/facility-manager-service/facility-manager-service-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: facility-manager-service
spec:
  port:
    targetPort: tcp-external
  tls:
    termination: passthrough
  wildcardPolicy: None
  to:
    kind: Service
    name: facility-manager-service
    weight: 100
  wildcardPolicy: None
